--- a/bib1.bib
+++ b/bib1.bib
@@ -377,3 +377,35 @@
 	year = "2010"
 }
 
+@article{lattimer2013,
+	abstract = "Neutron stars are valuable laboratories for the study of dense matter. Recent observations have uncovered both massive and low-mass neutron stars and have also set constraints on neutron star radii. The largest mass measurements are powerfully influencing the high-density equation of state because of the existence of the neutron star maximum mass. The smallest mass measurements, and the distributions of masses, have implications for the progenitors and formation mechanisms of neutron stars. The ensemble of mass and radius observations can realistically restrict the properties of dense matter, and, in particular, the behavior of the nuclear symmetry energy near the nuclear saturation density. Simultaneously, various nuclear experiments are progressively restricting the ranges of parameters describing the symmetry properties of the nuclear equation of state. In addition, new theoretical studies of pure neutron matter are providing insights. These observational, experimental and theoretical constraints of dense matter, when combined, are now revealing a remarkable convergence.",
+	archiveprefix = "arXiv",
+	author = "Lattimer, James M.",
+	comment = "published = 2013-05-15T14:59:02Z, updated = 2013-05-15T14:59:02Z, 61 pages including 13 figures",
+	doi = "10.1146/annurev-nucl-102711-095018",
+	eprint = "1305.3510v1",
+	journal = "Annu. Rev. Nucl. Part. Sci. 62, 485",
+	month = may,
+	primaryclass = "nucl-th",
+	title = "{The Nuclear Equation of State and Neutron Star Masses}",
+	url = "http://arxiv.org/abs/1305.3510v1; http://arxiv.org/pdf/1305.3510v1",
+	x-fetchedfrom = "arXiv.org",
+	year = "2013"
+}
+
+@article{akmal,
+	abstract = "Properties of dense nucleon matter and the structure of neutron stars are studied using variational chain summation methods and the new Argonne v18 two-nucleon interaction. The neutron star gravitational mass limit obtained with this interaction is 1.67 M\_{solar}. Boost corrections to the two-nucleon interaction, which give the leading relativistic effect of order (v/c)^2, as well as three-nucleon interactions, are also included in the nuclear Hamiltonian. Their successive addition increases the mass limit to 1.80 and 2.20 M\_{solar}. Hamiltonians including a three-nucleon interaction predict a transition in neutron star matter to a phase with neutral pion condensation at a baryon number density of 0.2 fm^{-3}. We also investigate the possibility of dense nucleon matter having an admixture of quark matter, described using the bag model equation of state. Neutron stars of 1.4 M\_{solar} do not appear to have quark matter admixtures in their cores. However, the heaviest stars are predicted to have cores consisting of a quark and nucleon matter mixture. These admixtures reduce the maximum mass of neutron stars from 2.20 to 2.02 (1.91) M\_{solar} for bag constant B = 200 (122) MeV/fm^3. Stars with pure quark matter in their cores are found to be unstable. We also consider the possibility that matter is maximally incompressible above an assumed density, and show that realistic models of nuclear forces limit the maximum mass of neutron stars to be below 2.5 M\_{solar}. The effects of the phase transitions on the composition of neutron star matter and its adiabatic index are discussed.",
+	archiveprefix = "arXiv",
+	author = "Akmal, A. and Pandharipande, V. R. and Ravenhall, D. G.",
+	comment = "published = 1998-04-13T21:50:12Z, updated = 1998-04-13T21:50:12Z, 39 pages RevTeX including 12 tables. 21 postscript figures. Submitted to Phys. Rev. C",
+	doi = "10.1103/PhysRevC.58.1804",
+	eprint = "nucl-th/9804027v1",
+	journal = "Phys.Rev.C58:1804-1828",
+	month = apr,
+	primaryclass = "nucl-th",
+	title = "{The equation of state for nucleon matter and neutron star structure}",
+	url = "http://arxiv.org/abs/nucl-th/9804027v1; http://arxiv.org/pdf/nucl-th/9804027v1",
+	x-fetchedfrom = "arXiv.org",
+	year = "1998"
+}
+
